# roster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  flake.nix  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-release.yml  ci.yml  release.yml
app/roster/: Cargo.toml  build.rs  config.local.toml
app/roster/benches/: parsing.rs  time.rs
app/roster/src/: lib.rs  main.rs
app/roster/src/application/server/: connection.rs  context.rs  frame.rs  frame_rkyv.rs  handle.rs  mod.rs  server_thread.rs
app/roster/src/application/server/cmd/: client_set_info.rs  get.rs  hello.rs  mod.rs  parse.rs  ping.rs  set.rs  unknown.rs
app/roster/src/application/server/cmd/acl/: cat.rs  mod.rs
app/roster/src/application/server/cmd/client/: get_name.rs  id.rs  info.rs  list.rs  mod.rs  set_info.rs  set_name.rs
app/roster/src/application/server/frame/: .write.rs.pending-snap  mod.rs  write.rs
app/roster/src/application/server/supervisor/: mod.rs
app/roster/src/domain/: README.md  mod.rs
app/roster/src/domain/cluster/: mod.rs
app/roster/src/domain/cluster/lan_cluster/: mod.rs  node.rs  snapshot.rs  state_machine.rs  store.rs
app/roster/src/domain/dialer/: mod.rs
app/roster/src/domain/storage/: mod.rs
app/roster/src/infrastructure/: mod.rs
app/roster/src/infrastructure/config/: lan_cluster.rs  mod.rs
app/roster/src/infrastructure/hash/: mod.rs
app/roster/src/infrastructure/instruments/: mod.rs
app/roster/tests/: basic.rs  client.rs  client_id.rs  client_info.rs  client_list.rs  client_setname.rs  hello.rs  set.rs
app/roster/tests/utils/: mod.rs  port_picker.rs
ci/: build-m1.sh
docs/: benchmarks.md  cluster.md  cmd_list.md  differences.md
lib/lan_protocol/: Cargo.toml  README.md
lib/lan_protocol/src/: lib.rs
lib/lan_protocol/src/requests/: mod.rs
lib/lan_protocol/src/responses/: mod.rs
