[workspace]
resolver = "2"

members = [
  "app/roster",
]

[workspace.package]
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
repository = "https://github.com/miaxos/roster/"

[workspace.dependencies]
anyhow = "1"
config = "0.13"
monoio = "0.2"
insta = { version = "1", features = ["yaml"] }
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
debug = false
panic = "abort"
lto = "thin"
codegen-units = 1
