[workspace]
resolver = "2"

members = [
  "app/roster",
]

[workspace.package]
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
repository = "https://github.com/miaxos/roster/"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
config = "0.13"
derive_builder = "0.12"
dotenv = "0.15"
monoio = "0.2"
insta = { version = "1", features = ["yaml"] }
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
