[package]
name = "roster"
version = "0.1.1"
edition = "2021"
description = "Replacement of Redis with Rust"
authors = ["Anthony Griffon <anthony@griffon.one>"]
homepage = "https://swarmd.io"
repository = "https://github.com/miaxos/roster"
license = "MIT OR Apache-2.0"
keywords = ["redis", "async", "io-uring"]

[lib]
name = "roster"
path = "./src/lib.rs"

[[bin]]
name = "roster"
path = "./src/main.rs"
doc = false

[features]
default = []

[dependencies]
anyhow.workspace = true
atoi_simd = "0.15"
coarsetime = "0.1"
bytestring = "1.3"
bytes.workspace = true
cfg-if = "1"
config.workspace = true
derive_builder.workspace = true
dotenv.workspace = true
local-sync = "0.1"
monoio = { workspace = true, features = ["bytes", "zero-copy", "iouring"] }
rustc-hash = "1.1.0"
scc = "2"
serde.workspace = true
thiserror = "1"

# Logging
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
monoio = { workspace = true, features = ["bytes", "legacy"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
insta.workspace = true
rand = "0.8"
redis-async = "0.16"
tokio = { version = "1.35", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "io-util",
  "net",
] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "time"
harness = false
