[package]
name = "roster"
version = "0.1.4"
edition = "2021"
description = "Replacement of Redis with Rust"
authors = ["Anthony Griffon <anthony@griffon.one>"]
homepage = "https://swarmd.io"
repository = "https://github.com/miaxos/roster"
license = "MIT OR Apache-2.0"
keywords = ["redis", "async", "io-uring"]
readme = "../../README.md"

[lib]
name = "roster"
path = "./src/lib.rs"

[[bin]]
name = "roster"
path = "./src/main.rs"
doc = false

[features]
default = []

[dependencies]
anyhow.workspace = true
async-recursion = "1"
atoi_simd = "0.15"
coarsetime = "0.1"
crc = "3"
bytestring = "1.3"
bytes.workspace = true
cfg-if = "1"
config.workspace = true
derive_builder.workspace = true
dotenv.workspace = true
futures = "0.3"
futures-locks = "0.7"
indexmap = "2"
local-sync = "0.1"
monoio = { workspace = true, features = ["bytes", "sync", "iouring"] }
openraft = { workspace = true, features = ["serde", "monoio"] }
rustc-hash = "1.1.0"
scc = "2"
sharded-thread = "1"
serde.workspace = true
thiserror = "1"
url = { workspace = true, features = ["serde"] }
rand = "0.8"
zstd = "0.13"

# Logging
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "json"] }

roster-lan-protocol.workspace = true

[target.'cfg(windows)'.dependencies]
monoio = { workspace = true, features = ["bytes", "legacy"] }

[build-dependencies]
chrono = "0.4.34"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
insta.workspace = true
rand = "0.8"
redis-async = "0.17"
regex = "1"
tokio = { version = "1.36", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "io-util",
  "net",
] }
tokio-util = "0.7"

[profile.release]
debug = true

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "time"
harness = false
