[package]
name = "roster-lan-protocol"
version = "0.0.1"
edition = "2021"
description = "Roster protocol for LAN Cluster communication"
authors = ["Anthony Griffon <anthony@griffon.one>"]
homepage = "https://swarmd.io"
repository = "https://github.com/miaxos/roster"
license = "MIT OR Apache-2.0"
keywords = ["redis", "async", "io-uring"]
readme = "./README.md"

[features]
default = []

[dependencies]
# anyhow.workspace = true
# const_format.workspace = true
# hyper.workspace = true
# once_cell.workspace = true
# openraft = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
ulid = { workspace = true, features = ["serde"] }
# serde_json.workspace = true
# reqwest = { workspace = true, features = ["json"] }
# tokio.workspace = true
# tracing.workspace = true
# hickory-resolver.workspace = true
# uuid = { workspace = true, features = ["serde"] }
